- svn.uludag.org.tr "Svn Nasıl" belgesini gösteriyor. Bunun yerine depoları her iki depoya da bağlantı eklendi. - e-posta listelerini servisler sayfasında listelemeye gerek yok. Arşiv sayfası ve listinfo sayfasına bağlantı yapıldı. - servisler sayfasında "web sayfaları" diye bir servisin olmasına gerek yok. Çıkartıldı. - http://jabber.uludag.org.tr'ye (ya da http://www.uludag.org.tr/jabber) erişilemiyor. Bu yüzden bağlantı kaldırıldı. Gerekli açıklama bu sayfadan yapıldı.

--- a/trunk/web/servisler.html
+++ b/trunk/web/servisler.html
@@ -1,35 +1,30 @@
 <!--#include file="header.html" -->
 <div class="sayfa">
 				<h1>Servisler</h1>
-					<h3>Web Sayfaları</h3>
-						<p>
-						<b>Erişim Adresi :</b>
-						<a href="http://www.uludag.org.tr">http://www.uludag.org.tr</a>
-						<br><br>
-						Proje web sayfalarının yayını <a href="http://www.uludag.org.tr">http://www.uludag.org.tr</a> adresinden yapılmaktadır. Proje ile ilgili edinilebilecek statik; yöneticiler, geliştiriciler ve destekleyiciler tarafından üzerinde anlaşılmış içeriğin sunumu işlevini üstlenmektedir.
-						</p>
-		
 					<h3>E-Posta Listeleri</h3>
 						<p>
+                        <b>E-Posta Listeleri Arayüzü :</b>
+                        <a
+                        href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo</a>
+                        <br>
 						<b>E-Posta Listeleri Arşivleri :</b>
 						<a href="http://liste.uludag.org.tr/">http://liste.uludag.org.tr/</a>
 						<br><br>
 						Konularına göre ayrılmış e-posta listeleri ile öncelikli olarak Ulusal Dağıtım ve geliştirme süreci konularının tartışılarak güçlendirilmeleri amacı güdülmüştür. 
 						</p>
-						 <ul>
-						 	<li><a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/uludag">uludag :</a> Ulusal Dağıtım hakkında bilgi almak ve fikirlerinizi paylaşmak için bu genel listeyi kullanabilirsiniz.</li>
-							<li><a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/turkce">turkce :</a> Türkçe projesi tartışma listesi.</li>
-<li><a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/paketler">paketler :</a> Paketler Projesi tartışma listesi.</li>
-							<li><a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/paketler-commits">paketler-commits :</a> Paketler Projesi Subversion deposunda yapılan güncellemeleri anlık olarak bildirir. Liste kullanıcılardan mesaj kabul etmez.</li>
-							<li><a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/svn-commits">svn-commits :</a> Subversion deposunda yapılan güncellemeleri anlık olarak bildirir. Liste kullanıcılardan mesaj kabul etmez.</li> 
-						</ul>
 
 					<h3>Subversion Deposu</h3>
 						<p>
 						<b>Erişim Adresi :</b>
-						<a href="http://svn.uludag.org.tr">http://svn.uludag.org.tr</a>
+						Uludağ Deposu : <a href="http://svn.uludag.org.tr/uludag/">http://svn.uludag.org.tr/uludag/</a>
+                        <br>
+                        Paketler Deposu : <a href="https://svn.uludag.org.tr/uludag/">https://svn.uludag.org.tr/paketler/</a>
 						<br><br>
-						Gelişim sürecinin ve gelişme aşamasındaki ürünlerin paylaşılmasında en önemli rolü oynayacak sürüm kontol sistemi servisidir. Subversion kullanımı ile ilgili ayrıntılı bilgiye <a href="belgeler.html">Belgeler sayfalarından</a> ulaşabilirsiniz.
+						Gelişim sürecinin ve gelişme aşamasındaki ürünlerin
+                        paylaşılmasında en önemli rolü oynayacak sürüm kontol
+                        sistemi servisidir. Subversion kullanımı ile ilgili
+                        ayrıntılı bilgi <a href="svn/svn.html">subversion deposu
+                        kullama kılavuzu</a> belgesinden alınabilir.
 						</p>
 			
 					<h3>Bugzilla</h3>
@@ -43,9 +38,14 @@
 					<h3>Jabber Sunucusu</h3>
 						<p>
 						<b>Erişim Adresi :</b>
-						<a href="http://jabber.uludag.org.tr">http://jabber.uludag.org.tr</a>
+						jabber.uludag.org.tr
 						<br><br>
-						Ulusal Dağıtım hızlı mesajlaşma servisidir. 
+						Ulusal Dağıtım hızlı mesajlaşma servisidir. Üyeliğe açık
+                        olan jabber servisimizi kullanmak için <a
+                        href="http://www.jabber.org/software/clients.php">jabber.org</a>'daki
+                        istemcilerden birini kurarak
+                        <strong>jabber.uludag.org.tr</strong> sunucusuna kayıt
+                        olabirsiniz.
 						</p>											
 
 </div>
