--- a/trunk/web/servisler.html
+++ b/trunk/web/servisler.html
@@ -15,10 +15,11 @@
 
 					<h3>Subversion Deposu</h3>
 						<p>
-						<b>Erişim Adresi :</b>
-						Uludağ Deposu : <a href="http://svn.uludag.org.tr/uludag/">http://svn.uludag.org.tr/uludag/</a>
+						<b>Uludağ Deposu : </b>
+                        <a href="http://svn.uludag.org.tr/uludag/">http://svn.uludag.org.tr/uludag/</a>
                         <br>
-                        Paketler Deposu : <a href="https://svn.uludag.org.tr/uludag/">https://svn.uludag.org.tr/paketler/</a>
+                        <b>Paketler Deposu : </b>
+                        <a href="https://svn.uludag.org.tr/uludag/">https://svn.uludag.org.tr/paketler/</a>
 						<br><br>
 						Gelişim sürecinin ve gelişme aşamasındaki ürünlerin
                         paylaşılmasında en önemli rolü oynayacak sürüm kontol
