duzeltmeler, ve ingilizce sayfalarin eksikleri. bi kontrol ediverin.

--- a/trunk/web/en/index.html
+++ b/trunk/web/en/index.html
@@ -5,7 +5,12 @@
 		<tr>
 			<td>
 				<p>
-				<b>Uludag</b> project aims at developing an operating system distribution based on the Linux kernel and the accompanying open source/free software applications. The distribution targets the desktop user in the first stage.
+<b>Uludag</b> project is a GNU/Linux distribution, targeting at computer
+literate users' basic desktop needs; with acquiring the strong ideas,
+architecture and code of other distributions; with a custom configuration
+framework which has the ability to evolve into an autonomous system;
+for simplifying the installation and usage of the computers.
+
 				</p>
 				<p>
 				Goals of the <b>Uludag project</b>
@@ -44,7 +49,7 @@
 			<td class="bottom">
 				<h1>Uludağ Documents</h1>
 	                <p>
-                    <img alt="" border="0" align="middle" src="images/arrow.gif">To read more [ available in Turkish ]<a href="belgeler.html">click here</a>
+                    <img alt="" border="0" align="middle" src="images/arrow.gif">To read more (in Turkish) <a href="belgeler.html">click here</a>
                     </p>
 			</td>	
 			<td class="bottom">
