--- a/trunk/web/projeler.html
+++ b/trunk/web/projeler.html
@@ -21,14 +21,20 @@ birbirlerinin varlıklarına ve yeteneklerine göre ayarlayabilirler.
 <h3 id="pisi">Pisi</h3>
 <p>
 Pisi, Ulusal Dağıtımın paket yönetim sistemidir. Paketlerin sisteme sorunsuz
-bir şekilde eklenip çıkarılmasını sağlar.
+bir şekilde eklenip çıkarılmasını sağlar. Paketlerin diğer paket/kitaplıklara ve
+Çomar görevlerine olan bağımlılıklarını tutar. Bir dosya türünü açmak yada
+web sayfalarını sunmak gibi Çomar görevlerini yapan paketleri bularak,
+kullanıcının, adını ve detaylarını bilmeden istediği işi yapan uygulamaları
+kurup çalıştırmasını sağlayabilir.
 </p>
 
 <h3 id="yali">Yalı</h3>
 <p>
 Yalı (Yet Another Linux Installer), işletim sistemi ve kullanıcının seçeceği
 paketleri hızlı ve sorunsuz olarak kurulum medyasından (CD, ağ, Internet, vb.)
-hedef sisteme yerleştiren sistemdir.
+hedef sisteme yerleştiren sistemdir. Mümkün olduğu durumlarda daha önce
+kurulmuş olan sistemden e-postalar, sayfa imleri gibi kullanıcıya ait bilgileri
+yeni sisteme taşıyacaktır.
 </p>
 
 <h3 id="paketler">Paketler</h3>
