--- a/trunk/web/servisler.html
+++ b/trunk/web/servisler.html
@@ -19,7 +19,7 @@
                         <a href="http://svn.uludag.org.tr/uludag/">http://svn.uludag.org.tr/uludag/</a>
                         <br>
                         <b>Paketler Deposu : </b>
-                        <a href="https://svn.uludag.org.tr/uludag/">https://svn.uludag.org.tr/paketler/</a>
+                        <a href="https://svn.uludag.org.tr/paketler/">https://svn.uludag.org.tr/paketler/</a>
 						<br><br>
 						Gelişim sürecinin ve gelişme aşamasındaki ürünlerin
                         paylaşılmasında en önemli rolü oynayacak sürüm kontol
