duzeltmeler, yeni eklenen belgeler.

--- a/trunk/web/en/index.html
+++ b/trunk/web/en/index.html
@@ -40,14 +40,14 @@ for simplifying the installation and usage of the computers.
 	<tbody>
 		<tr>
 			<td class="bottom">
-				<h1>Uludağ Projects</h1>
+				<h1>Uludag Projects</h1>
                     <p>
                     <img alt="" border="0" align="middle" src="images/arrow.gif">To learn more <a href="projeler.html">click here</a>
                     </p>
 			
 			</td>
 			<td class="bottom">
-				<h1>Uludağ Documents</h1>
+				<h1>Uludag Documents</h1>
 	                <p>
                     <img alt="" border="0" align="middle" src="images/arrow.gif">To read more (in Turkish) <a href="belgeler.html">click here</a>
                     </p>
