--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -5,7 +5,7 @@
 		<tr>
 			<td>
 				<p>
-				<b>Ulusal Dağıtım</b> projesi <i>UEKAE</i> tarafından, bilişim okur-yazarlığına sahip bilgisayar kullanıcılarının temel masaüstü ihtiyaçlarını hedefleyerek; mevcut Linux dağıtımlarının üstün taraflarını kavram, mimari ya da kod olarak kullanan; otonom sisteme evrilebilecek bir yapılandırma çerçevesi ve araçları ile kurulum, yapılandırma ve kullanım kolaylığı sağlamak üzere geliştirilen bir GNU/Linux dağıtımıdır.
+				<b>Ulusal Dağıtım</b> projesi <A HREF="http://www.uekae.tubitak.gov.tr">UEKAE</A> tarafından, bilişim okur-yazarlığına sahip bilgisayar kullanıcılarının temel masaüstü ihtiyaçlarını hedefleyerek; mevcut Linux dağıtımlarının üstün taraflarını kavram, mimari ya da kod olarak kullanan; otonom sisteme evrilebilecek bir yapılandırma çerçevesi ve araçları ile kurulum, yapılandırma ve kullanım kolaylığı sağlamak üzere geliştirilen bir GNU/Linux dağıtımıdır.
 				<br><br>
 				<b>Ulusal Dağıtım</b> projesinin hedefleri
 				</p>
@@ -45,11 +45,15 @@
 					<p>
 					<img alt="" border="0" align="middle" src="images/arrow.gif">Uludağ Belgelerine ulaşmak için <a href="belgeler.html">tıklayın</a>
 					</p>
+					<p>
+					<img alt="" border="0" align="middle" src="images/arrow.gif">
+					<b>18 Kasım 2004</b><br>Nasıl yardım ederim belgesi eklendi, U18n ve kaynak temizleme güncellendi.
+					</p>
 			</td>	
 			<td class="bottom">
 				<h1>Uludağ Haberleri</h1>
 					<p>
-					<b>03 Kasım 2004</b> Yeni web sayfalarımız hayata başladı...
+					<b>03 Kasım 2004</b> Yeni web sayfalarımız yayında...
 					</p>
 	 		</td>
 		</tr>
