--- a/trunk/web/projeler.html
+++ b/trunk/web/projeler.html
@@ -3,34 +3,35 @@
 
 <h1>Projeler</h1>
 <ul>
-	<li><a href="#comar">Çomar</a></li>
-	<li><a href="#pisi">Pisi</a></li>
-	<li><a href="#yali">Yalı</a></li>
+	<li><a href="#comar">COMAR</a></li>
+	<li><a href="#pisi">PISI</a></li>
+	<li><a href="#yali">YALI</a></li>
 	<li><a href="#paketler">Paketler</a></li>
 </ul>
 
-<h3 id="comar">Çomar</h3>
+<h3 id="comar">COMAR</h3>
 <p>
-Çomar (COnfiguration MAnageR), sistemde kurulu yazılımların birbirleriyle
+COMAR (COnfiguration MAnageR), sistemde kurulu yazılımların birbirleriyle
 uyumlu çalışabilmesini sağlayacak olan yapılandırma yöneticisidir. Her
 uygulamanın hangi görevleri yapabildiği ve hangi görevlere ve bilgilere
-ihtiyaç duyduğu bilgisini tutar. Çomar aracılığıyla uygulamalar kendilerini
+ihtiyaç duyduğu bilgisini tutar. COMAR aracılığıyla uygulamalar kendilerini
 birbirlerinin varlıklarına ve yeteneklerine göre ayarlayabilirler.
 </p>
 
-<h3 id="pisi">Pisi</h3>
+<h3 id="pisi">PISI</h3>
 <p>
-Pisi, Ulusal Dağıtımın paket yönetim sistemidir. Paketlerin sisteme sorunsuz
+PISI (Packages Installed Succesfully as Intented), Ulusal Dağıtımın paket
+yönetim sistemidir. Paketlerin sisteme sorunsuz
 bir şekilde eklenip çıkarılmasını sağlar. Paketlerin diğer paket/kitaplıklara ve
-Çomar görevlerine olan bağımlılıklarını tutar. Bir dosya türünü açmak yada
-web sayfalarını sunmak gibi Çomar görevlerini yapan paketleri bularak,
+COMAR görevlerine olan bağımlılıklarını tutar. Bir dosya türünü açmak yada
+web sayfalarını sunmak gibi COMAR görevlerini yapan paketleri bularak,
 kullanıcının, adını ve detaylarını bilmeden istediği işi yapan uygulamaları
 kurup çalıştırmasını sağlayabilir.
 </p>
 
-<h3 id="yali">Yalı</h3>
+<h3 id="yali">YALI</h3>
 <p>
-Yalı (Yet Another Linux Installer), işletim sistemi ve kullanıcının seçeceği
+YALI (Yet Another Linux Installer), işletim sistemi ve kullanıcının seçeceği
 paketleri hızlı ve sorunsuz olarak kurulum medyasından (CD, ağ, Internet, vb.)
 hedef sisteme yerleştiren sistemdir. Mümkün olduğu durumlarda daha önce
 kurulmuş olan sistemden e-postalar, sayfa imleri gibi kullanıcıya ait bilgileri
@@ -48,7 +49,7 @@ sorumludur.
 
 <p>
 Uygulamaların seçilmesi, hatalarının düzeltilmesi, Türkçe sorunlarının
-giderilmesi, Pisi ve Çomar için gerekli bilgilerin sağlanıp paketlenmesi
+giderilmesi, PISI ve COMAR için gerekli bilgilerin sağlanıp paketlenmesi
 bu proje kapsamındadır.
 </p>
 
