--- a/trunk/web/en/index.html
+++ b/trunk/web/en/index.html
@@ -49,7 +49,7 @@ for simplifying the installation and usage of the computers.
 			<td class="bottom">
 				<h1>Uludag Documents</h1>
 	                <p>
-                    <img alt="" border="0" align="middle" src="images/arrow.gif">To read more (in Turkish) <a href="belgeler.html">click here</a>
+                    <img alt="" border="0" align="middle" src="images/arrow.gif">To read more (in Turkish) <a href="../belgeler.html">click here</a>
                     </p>
 			</td>	
 			<td class="bottom">
