Onur'u ekledik, comar mimari belgesi, ufak fixler

--- a/trunk/web/en/kimiz.html
+++ b/trunk/web/en/kimiz.html
@@ -97,6 +97,18 @@
 	</p>
 </td>
 </tr>
+<tr>
+<td>
+	<h3>Onur Küçük</h3>
+	<p>
+	E-mail: <a href="mailto:onur [ at ] uludag.org.tr">onur [ at ] uludag.org.tr</a>
+	<br>
+	Web: <a  href="http://cekirdek.uludag.org.tr/~onur/">http://cekirdek.uludag.org.tr/~onur/</a>
+	<br>
+	Jabber: onur [ at ] jabber.uludag.org.tr
+	</p>
+</td>
+</tr>
 
 </tbody></table>
 </center>
