--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -43,11 +43,12 @@
 			<td class="bottom">
 				<h1>Uludağ Belgeleri</h1>
 					<p>
-					<img alt="" border="0" align="middle" src="images/arrow.gif">Uludağ Belgelerine ulaşmak için <a href="belgeler.html">tıklayın</a>
+					<img alt="" border="0" align="middle" src="images/arrow.gif">
+					<b>18 Kasım 2004</b><br>Nasıl yardım ederim belgesi eklendi, U18n ve kaynak temizleme güncellendi.
 					</p>
 					<p>
 					<img alt="" border="0" align="middle" src="images/arrow.gif">
-					<b>18 Kasım 2004</b><br>Nasıl yardım ederim belgesi eklendi, U18n ve kaynak temizleme güncellendi.
+					<b>24 Kasım 2004</b><br>Çomar Mimarisi belgesi eklendi.
 					</p>
 			</td>	
 			<td class="bottom">
