--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -56,6 +56,9 @@
 					<p>
 					<b>03 Kasım 2004</b> Yeni web sayfalarımız yayında...
 					</p>
+					<p>
+					<b>19 Kasım 2004</b> <a href="http://liste.uludag.org.tr/uludag/2004-November/000734.html">Haber bülteni</a>mizin ilk sayısı çıktı...
+					</p>
 	 		</td>
 		</tr>
 	</tbody>
