--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -5,7 +5,7 @@
 		<tr>
 			<td>
 				<p>
-				<b>Ulusal Dağıtım</b> projesi <A HREF="http://www.uekae.tubitak.gov.tr">UEKAE</A> tarafından, bilişim okur-yazarlığına sahip bilgisayar kullanıcılarının temel masaüstü ihtiyaçlarını hedefleyerek; mevcut Linux dağıtımlarının üstün taraflarını kavram, mimari ya da kod olarak kullanan; otonom sisteme evrilebilecek bir yapılandırma çerçevesi ve araçları ile kurulum, yapılandırma ve kullanım kolaylığı sağlamak üzere geliştirilen bir GNU/Linux dağıtımıdır.
+				<b>Ulusal Dağıtım</b> projesi <A HREF="http://www.uekae.tubitak.gov.tr">TÜBİTAK - UEKAE</A> tarafından, bilişim okur-yazarlığına sahip bilgisayar kullanıcılarının temel masaüstü ihtiyaçlarını hedefleyerek; mevcut Linux dağıtımlarının üstün taraflarını kavram, mimari ya da kod olarak kullanan; otonom sisteme evrilebilecek bir yapılandırma çerçevesi ve araçları ile kurulum, yapılandırma ve kullanım kolaylığı sağlamak üzere geliştirilen bir GNU/Linux dağıtımıdır.
 				<br><br>
 				<b>Ulusal Dağıtım</b> projesinin hedefleri
 				</p>
