bulten arşiv sayfaları için header ve foother bilgilerini girdim. index.html'de bulten'in duyurusunu yaptım.

--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -44,20 +44,26 @@
 				<h1>Uludağ Belgeleri</h1>
 					<p>
 					<img alt="" border="0" align="middle" src="images/arrow.gif">
-					<b>18 Kasım 2004</b><br>Nasıl yardım ederim belgesi eklendi, U18n ve kaynak temizleme güncellendi.
+					<b>24 Kasım 2004</b><br>Çomar Mimarisi belgesi eklendi.
 					</p>
 					<p>
 					<img alt="" border="0" align="middle" src="images/arrow.gif">
-					<b>24 Kasım 2004</b><br>Çomar Mimarisi belgesi eklendi.
+					<b>18 Kasım 2004</b><br>Nasıl yardım ederim belgesi eklendi, U18n ve kaynak temizleme güncellendi.
 					</p>
+
 			</td>	
 			<td class="bottom">
 				<h1>Uludağ Haberleri</h1>
 					<p>
-					<b>03 Kasım 2004</b> Yeni web sayfalarımız yayında...
+					  <b>07 Aralık 2004</b> Uludağ Haftalık Bülteni <a href="bulten/">arşivi</a> yayınlanmaya başlandı. Bültene <a href="bulten/bulten.xml">rss bağlantısı</a> ile de ulaşabilirsiniz.
 					</p>
+
 					<p>
 					<b>19 Kasım 2004</b> <a href="http://liste.uludag.org.tr/uludag/2004-November/000734.html">Haber bülteni</a>mizin ilk sayısı çıktı...
+					</p>
+
+					<p>
+					<b>03 Kasım 2004</b> Yeni web sayfalarımız yayında...
 					</p>
 	 		</td>
 		</tr>
