haberler'de de o güzel küçük bullet resimlerinden var artık.

--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -55,14 +55,17 @@
 			<td class="bottom">
 				<h1>Uludağ Haberleri</h1>
 					<p>
+					  <img alt="" border="0" align="middle" src="images/arrow.gif">
 					  <b>07 Aralık 2004</b> Uludağ Haftalık Bülteni <a href="bulten/">arşivi</a> yayınlanmaya başlandı. Bültene <a href="bulten/bulten.xml">rss bağlantısı</a> ile de ulaşabilirsiniz.
 					</p>
 
 					<p>
+					  <img alt="" border="0" align="middle" src="images/arrow.gif">
 					<b>19 Kasım 2004</b> <a href="http://liste.uludag.org.tr/uludag/2004-November/000734.html">Haber bülteni</a>mizin ilk sayısı çıktı...
 					</p>
 
 					<p>
+					  <img alt="" border="0" align="middle" src="images/arrow.gif">
 					<b>03 Kasım 2004</b> Yeni web sayfalarımız yayında...
 					</p>
 	 		</td>
