--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -5,7 +5,7 @@
 		<tr>
 			<td>
 				<p>
-				<h1>Ulusal Dağıtım Projesi ilk ürününü çıkardı:<br> Pardus Ulusal İşletim Sistemi Çalışan CD</h1>.
+				<h1>Ulusal Dağıtım Projesi ilk ürününü çıkardı:<br> Pardus Ulusal İşletim Sistemi Çalışan CD</h1>
 				</p>
 				
 				<p>
