duzetme, bir tırnak

--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -13,7 +13,7 @@
 				</p>
 				
 				<p>
-				Pardus, özgür yazılım yaklaşımı ile açık kaynaklı yayımlanmakta ve <a href="gpl.html">GNU Genel Kamu Lisansı</a> (General Public License – GPL) ile özgürce dağıtılmaktadır. Bu karar 30 Ocak 2005'te yayınlanan <a href="bulten/arsiv/30012005.html">Uludağ Haftalık Bülteni</a>nde açıklanmıştı. 
+				Pardus, özgür yazılım yaklaşımı ile açık kaynaklı yayımlanmakta ve <a href="gpl.html">GNU Genel Kamu Lisansı</a> (General Public License – GPL) ile özgürce dağıtılmaktadır. Bu karar 30 Ocak 2005'te yayınlanan <a href="bulten/arsiv/30012005.html">Uludağ Haftalık Bülteni</a>'nde açıklanmıştı. 
 				</p>
 				
 				<p>
