--- a/trunk/web/en/index.html
+++ b/trunk/web/en/index.html
@@ -5,32 +5,30 @@
 		<tr>
 			<td>
 				<p>
-<b>Uludag</b> project is a GNU/Linux distribution, targeting at computer
-literate users' basic desktop needs; with acquiring the strong ideas,
-architecture and code of other distributions; with a custom configuration
-framework which has the ability to evolve into an autonomous system;
-for simplifying the installation and usage of the computers.
-
-				</p>
-				<p>
-				Goals of the <b>Uludag project</b>
-				</p>
-				<ul>
-					<li>To develop a widely used operating system distribution,</li>
-					<li>To establish a sustainable organization to develop this distribution,</li>
-					<li>To contribute to the open source/free software community through this distribution and the surrounding development ecosystem.</li>
-				</ul>
-				<p>
-				<b>The Uludag</b> operating system
-				</p>
-				<ul>
-					<li>Will provide full and sound Turkish support,</li>
-					<li>Will be easy to install and use,</li>
-					<li>Will have a human-centric task-based modular structure.</li>
-					</ul>
+<h1>The first product of Uludag has been released:<br>
+ Pardus National Operating System Live CD</h1>
+</p>
+<p>
+Pardus Live CD, the bootable CD version of the Pardus National Operating
+System, has been announced and distributed to the participants of
+<a href="http://ab2005.gantep.edu.tr/">Akademik Bilisim</a> in Gaziantep University. Live CD includes office tools
+(word processor, spreadsheet editor, presentation tool, etc.), Internet
+tools (browser, e-mail, instant messaging, relay chat etc. clients),
+multimedia and graphics tools (video player, music player, etc.), games
+and lots of other applications.
+</p>
+<p>
+Pardus is opensource and freely distributed as a <a href="http://www.gnu.org/copyleft/gpl.html">GPL (General Public
+License)</a> product. This decision had been announced in the <a href="../bulten/arsiv/30012005.html">Uludag Weekly
+Bulletin</a> on 30 Jan 2005.
+</p>
+<p>You can freely download Pardus Live CD <a href="ftp://ftp.linux.org.tr/pub/mirrors/pardus/pardus-calisan_cd-1.0b.iso">iso</a> image and <a href="ftp://ftp.linux.org.tr/pub/mirrors/pardus/pardus-calisan_cd-1.0b.iso.md5sum">md5sum</a> value.</p>
+<p>
+<i>(Thanks to <a href="http://www.linux.org.tr" target="_blank">Linux Users Group</a> for hosting Pardus Live CD iso image by reason of traffic density on our server)</i>
+<p>
 			</td>
 			<td>
-				<img src="../images/54.jpg" alt="" border="0">
+				<img src="../images/pardus.jpg" alt="" border="0">
 			</td>
 		</tr>
 	</tbody>
