--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -17,11 +17,13 @@
 				</p>
 				
 				<p>
-				Pardus Çalışan CD'nin <a href="pardus/iso/pardus-calisan_cd-1.0b.iso">iso</a> dosyasını ve <a href="pardus/iso/pardus-calisan_cd-1.0b.iso.md5sum">md5sum</a> dosyasını  indirebilirsiniz.
+				Pardus Çalışan CD'nin <a href="ftp://ftp.linux.org.tr/pub/mirrors/pardus/pardus-calisan_cd-1.0b.iso">iso</a> dosyasını ve <a href="ftp://ftp.linux.org.tr/pub/mirrors/pardus/pardus-calisan_cd-1.0b.iso.md5sum">md5sum</a> değerini  indirebilirsiniz.
+
+				<p><i>(Sunucumuz üzerindeki trafik yoğunluğu nedeni ile CD'ye yazılabilir ISO dosyamıza ev sahipliği yapan <a href="http://www.linux.org.tr/" target="_blank">Linux Kullanıcıları Derneği</a>'ne teşekkür ederiz)</i></p>
 				</p>
 			</td>
 			<td>
-				<img src="images/pardus.jpg" alt="" border="0">
+				<a href="pardus/index.html"><img src="images/pardus.jpg" alt="" border="0"></a>
 			</td>
 		</tr>
 	</tbody>
