--- a/trunk/web/pardus/bizkimiz.html
+++ b/trunk/web/pardus/bizkimiz.html
@@ -160,7 +160,7 @@ Helvetica, sans-serif;}
 <center><table width="70%"><tbody>
 <tr>
 <td><h3>Ayrıca,</h3>
-<p>Yayınladığımız geliştirici kök dosya sistemini bilgisayarlarında deneyerek, geri bildirimleri ve yorumları ile bize yol göstermeye gayret göstermiş olan <b>Recai Öktaş</b>, <b>Görkem Çetin</b>, <b>Nilgün Belma Bugüner</b>, <b>Nazım Koç</b>, <b>Ozan Eren Bilgen</b>, <b>Ümit Bozkır</b>, <b>Arman Aksoy</b>, <b>Onur Yalazı</b>, ve <b>Mert Uzbaşlı</b>'ya teşekkür ederiz.</p>
+<p>Yayınladığımız geliştirici kök dosya sistemini bilgisayarlarında deneyerek, geri bildirimleri ve yorumları ile bize yol göstermeye gayret göstermiş olan <b>Recai Oktaş</b>, <b>Görkem Çetin</b>, <b>Nilgün Belma Bugüner</b>, <b>Nazım Koç</b>, <b>Ozan Eren Bilgen</b>, <b>Ümit Bozkır</b>, <b>Arman Aksoy</b>, <b>Onur Yalazı</b>, ve <b>Mert Uzbaşlı</b>'ya teşekkür ederiz.</p>
 </td>
 </tr>
 </tbody></table></center>
