bug #120'yi kapatıyor.

--- a/trunk/web/servisler.html
+++ b/trunk/web/servisler.html
@@ -43,7 +43,7 @@
 						<br><br>
 						Ulusal Dağıtım hızlı mesajlaşma servisidir. Üyeliğe açık
                         olan jabber servisimizi kullanmak için <a
-                        href="http://www.jabber.org/software/clients.php">jabber.org</a>'daki
+                        href="http://www.jabber.org/software/clients.shtml">jabber.org</a>'daki
                         istemcilerden birini kurarak
                         <strong>jabber.uludag.org.tr</strong> sunucusuna kayıt
                         olabirsiniz.
