kimiz += umut pulat..

--- a/trunk/web/kimiz.html
+++ b/trunk/web/kimiz.html
@@ -108,6 +108,19 @@
 	Jabber: onur [ at ] jabber.uludag.org.tr
 	</p>
 </td>
+</tr>
+<tr>
+<td>
+	<h3>M. Umut Pulat</h3>
+	<p>
+	E-Posta: <a href="mailto:umut [ at ] uludag.org.tr">umut [ at ] uludag.org.tr</a>
+	<br>
+	Web: <a  href="http://cekirdek.uludag.org.tr/~umut/">http://cekirdek.uludag.org.tr/~umut/</a>
+	<br>
+	Jabber: umut [ at ] jabber.uludag.org.tr
+	</p>
+</td>
+</tr>
 
 </tbody></table>
 </center>
