--- a/trunk/web/en/kimiz.html
+++ b/trunk/web/en/kimiz.html
@@ -110,6 +110,20 @@
 </td>
 </tr>
 
+<tr>
+<td>
+	<h3>M. Umut Pulat</h3>
+	<p>
+	E-mail: <a href="mailto:umut [ at ] uludag.org.tr">umut [ at ] uludag.org.tr</a>
+	<br>
+	Web: <a  href="http://cekirdek.uludag.org.tr/~umut/">http://cekirdek.uludag.org.tr/~umut/</a>
+	<br>
+	Jabber: umut [ at ] jabber.uludag.org.tr
+	</p>
+</td>
+</tr>
+
+
 </tbody></table>
 </center>
 </div>
