--- a/trunk/web/eng/projeler/paketler/index.html
+++ b/trunk/web/eng/projeler/paketler/index.html
@@ -83,7 +83,7 @@ PISI ve COMAR için gerekli bilgilerin sağlanıp paketlenmesi bu proje kapsamı
 </p>
 
 <p class="icmetin">
-<a href="http://svn.uludag.org.tr/paketler/">http://svn.uludag.org.tr/paketler/</a>
+<a href="https://svn.uludag.org.tr/paketler/">https://svn.uludag.org.tr/paketler/</a>
 </p>
 
 </div>
