--- a/web/eng/iletisim.html
+++ b/web/eng/iletisim.html
@@ -27,15 +27,15 @@
 <tr>
 <td width="680" height="19" valign="top" bgcolor="#B9D0B3">
 <p class="menubar">
-<a href="index.html">Ana Sayfa</a>
-| <a href="hakkimizda.html">Hakkımızda</a>
-| <a href="projeler/index.html">Projeler</a>
-| <a href="belgeler/index.html">Belgeler</a>
-| <a href="urunler/index.html">Ürünler</a>
-| <a href="sss.html">Sık Sorulanlar</a>
-| <a href="iletisim.html">İletişim</a>
-| <a href="basin/index.html">Basında Uludağ</a>
-| <a href="eng/index.html">English</a>
+<a href="index.html">Home</a>
+| <a href="hakkimizda.html">About</a>
+| <a href="projeler/index.html">Projects</a>
+| <a href="belgeler/index.html">Documents</a>
+| <a href="urunler/index.html">Products</a>
+| <a href="sss.html">FAQ</a>
+| <a href="iletisim.html">Contact Us</a>
+| <a href="basin/index.html">Press</a>
+| <a href="../index.html">Türkçe</a>
 </p>
 </tr>
 </table>
@@ -47,61 +47,56 @@
               <tr>
                 <td width="20" height="275" valign="top"><img src="./images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top"></td>
                 <td width="10" valign="top">&nbsp;</td>
-                <td width="661" valign="top" class="metin"><p><span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">İletişim</font></span><br>
+                <td width="661" valign="top" class="metin"><p><span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">Contact</font></span><br>
                         <br>
-                        <span class="baslik"><img src="./images/bullet-krm.png"> E-Posta Listeleri</span><br><br>
+                        <span class="baslik"><img src="./images/bullet-krm.png"> E-Mail Lists</span><br><br>
 			
-                        <b>-= Uludağ =-</b><br><br>
-			Uludağ Projesi'nin genel tartışma listesidir. Proje ile ilgili sorularınızı, eleştiri ve önerilerinizi
-			bu e-posta listesinde dile getirebilir, projenin gidişatı ve son durumu ile ilgili bilgiyi bu listeyi takip ederek
-			elde edebilirsiniz.
+                        <b>-= Uludag =-</b><br><br>
+			General discussion list of Uludag Project. You can share your questions, comments, critiques and suggestions about project. 
+			By tracking this list you will get information about project status.
 			<br><br>
-			Listenin üyelik işlemleri ile ilgili sayfaya
-			<a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/uludag">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/uludag</a>
-			adresinden ulaşabilir, <a href="http://liste.uludag.org.tr/uludag/">http://liste.uludag.org.tr/uludag/</a>
-			adresinden liste arşivlerini görüntüleyebilir ve daha önceki tartışmaları okuyabilirsiniz.<br><br>
+			You can visit <a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/uludag">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/uludag</a>
+			for subscriber actions, and <a href="http://liste.uludag.org.tr/uludag/">http://liste.uludag.org.tr/uludag/</a>
+			to read list archives.<br><br>
 
 			
-	                <b>-= Kalite =-</b><br><br>
-			Uludağ Projesi Kalite Takımı'nın aktif olarak çalıştığı listedir. Bu e-posta listesi, projenin işleyişini hızlandırmak 
-			ve yardım etmek isteyen her seviyedeki insan için iyi bir başlangıç noktası oluşturmayı hedefler. Listeye üye
-			olmadan önce belgeler sayfamızdaki "<b>Nasıl Yardım Ederim (Kalite)</b>" belgesini okumanız gerekmektedir.
+	                <b>-= Quality =-</b><br><br>
+			Uludag Project Quality Team's workings goes on this list. This list aims that create a starting point for all people at any level who wants
+			help and make faster projects mechanism. Before getting a member of this list you must read "<b>How can I help? (Quality)</b>" 
+			document located on documents page.
 			<br><br>
-			Listenin üyelik işlemleri ile ilgili sayfaya
-			<a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/kalite">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/kalite</a>
-			adresinden ulaşabilir, <a href="http://liste.uludag.org.tr/kalite/">http://liste.uludag.org.tr/kalite/</a>
-			adresinden liste arşivlerini görüntüleyebilir ve daha önceki tartışmaları okuyabilirsiniz.<br><br>
+			You can visit <a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/kalite">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/kalite</a>
+			for subscriber actions, and <a href="http://liste.uludag.org.tr/kalite/">http://liste.uludag.org.tr/kalite/</a>
+			to read list archives.<br><br>
 		
-	                <b>-= Türkçe =-</b><br><br>
-			Yerelleştirme ve Türkçe çalışmalarının yapıldığı listedir. Bu listede ortak sözlük veritabanı gibi çalışmaların
-			yanında yabancı terimlere karşılıklar aranmakta ve Türkçe problemleri giderilmeye çalışılmaktadır.
+	                <b>-= Turkish =-</b><br><br>
+			Localization and Turkish workings goes on this list. At this list there is different workings like
+			solving Turkish problems, finding equivalent Turkish words of terms, generating collective dictionary 
+			database.
 			<br><br>
-			Listenin üyelik işlemleri ile ilgili sayfaya
-			<a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/turkce">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/turkce</a>
-			adresinden ulaşabilir, <a href="http://liste.uludag.org.tr/turkce/">http://liste.uludag.org.tr/turkce/</a>
-			adresinden liste arşivlerini görüntüleyebilir ve daha önceki tartışmaları okuyabilirsiniz.<br><br><br>
+			You can visit <a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/turkce">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/turkce</a>
+			for subscriber actions, and <a href="http://liste.uludag.org.tr/turkce/">http://liste.uludag.org.tr/turkce/</a>
+			to read list archives.<br><br><br>
 
-                    <span class="baslik"><img src="./images/bullet-krm.png"> Jabber Sunucusu
+                    <span class="baslik"><img src="./images/bullet-krm.png"> Jabber Server
                     </span><br><br>
-                    Ulusal Dağıtım hızlı mesajlaşma servisidir.
-                    Üyeliğe açık olan jabber servisimizi kullanmak için jabber.org'daki
-                    istemcilerden birini kurarak jabber.uludag.org.tr sunucusuna
-                    kayıt olabirsiniz. Ayrıca geliştiricilerin jabber hesaplarına ait adreslere de <a href="./hakkimizda.html">hakkımızda</a>
-		    sayfasından ulaşabilirsiniz.
+                    It's Uludag's instant messaging service.
+                    To use this service only thing is having a installed jabber client (can be downloaded from jabber.org)
+                    and connect to jabber.uludag.org.tr. Otherwise you can get developers jabber addresses from <a href="./hakkimizda.html">about</a>
+		    page.
 		    <br><br>
-		    Sunucuya erişim adresi jabber.uludag.org.tr'dir.
+		    Server address is jabber.uludag.org.tr.
 		    <br><br>
 		    
 
 
                     <span class="baslik"><img src="./images/bullet-krm.png"> Bugzilla</span><br><br>
-                    Yaygın olarak kullanılan hata takip sistemi Bugzilla, Ulusal Dağıtım projesinin de
-                    hata takip sistemi seçimidir. Ulusal Dağıtım projesi servisleri, geliştirme
-                    araçları ve geliştirme ürünleri ile ilgili geliştirme istekleri
-                    (enhancements) ve hatalar (bugs) buradan takip edilebilir,
-                    güncellenebilir veya yenileri eklenerek geliştiriciler sorunlara dair haberdar edilebilir.<br><br>
+                    Popular bug tracking system Bugzilla is (also) choice of Uludag Project. 
+                    Enhancements and bugs about Uludag Project services, development tools and development 
+                    products can be tracked from here, will be updated or new ones added. Developers keep 
+                    informed about every change.<br><br>
 
-                    Erişim adresi <a href="http://bugs.uludag.org.tr">http://bugs.uludag.org.tr</a>'dir.<br>
+                    You can access Uludag Bugzilla at <a href="http://bugs.uludag.org.tr">http://bugs.uludag.org.tr</a>.<br>
                     <br>
 		   </p>
                 </td>
@@ -118,7 +113,7 @@ Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
 kaynak gösterilmek koşulu ile kullanılması serbesttir.
 <em><br>
 <strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
+For more info and your suggestions, please use
 <a href="mailto:bilgi at uludag.org.tr">bilgi
 at uludag.org.tr</a>
 </p>
