Necati Demir'den index.html,  Ahmet Aygün'den iletisim.html
 Ellerine sağlık..

--- a/trunk/web/eng/index.html
+++ b/trunk/web/eng/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
+	<title>:: ulusal dağıtım project :: tübitak-uekae ::</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="stil.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
@@ -27,15 +27,15 @@
 <tr>
 <td width="680" height="19" valign="top" bgcolor="#B9D0B3">
 <p class="menubar">
-<a href="index.html">Ana Sayfa</a>
-| <a href="hakkimizda.html">Hakkımızda</a>
-| <a href="projeler/index.html">Projeler</a>
-| <a href="belgeler/index.html">Belgeler</a>
-| <a href="urunler/index.html">Ürünler</a>
-| <a href="sss.html">Sık Sorulanlar</a>
-| <a href="iletisim.html">İletişim</a>
-| <a href="basin/index.html">Basında Uludağ</a>
-| <a href="eng/index.html">English</a>
+<a href="index.html">Home</a>
+| <a href="hakkimizda.html">About</a>
+| <a href="projeler/index.html">Projects</a>
+| <a href="belgeler/index.html">Documents</a>
+| <a href="urunler/index.html">Products</a>
+| <a href="sss.html">FAQ</a>
+| <a href="iletisim.html">Contact Us</a>
+| <a href="basin/index.html">Press</a>
+| <a href="eng/index.html">Türkçe</a>
 </p>
 </tr>
 </table>
@@ -50,27 +50,28 @@
 <td width="20" height="286" valign="top"><img src="./images/bullet6.png" alt="nokta" width="20" height="20" hspace="0" vspace="0" align="top"></td>
 <td width="10" valign="top">&nbsp;</td>
 <td width="661" valign="top" class="metin"><span class="metin"><img src="./images/54.jpg" alt="nokta" width="350" height="263" hspace="3" vspace="10" align="right"></span>
-<span class="baslik">Ulusal Dağıtım Projesi ilk ürününü çıkardı:<br>
-Pardus Ulusal İşletim Sistemi Çalışan CD</span><br>
+<span class="baslik">The first product of Ulusal Dağıtım Project has been released:<br>
+Pardus Live CD</span><br>
 <br>
 
-<span class="metin">Gaziantep Üniversitesi'nde düzenlenen
-<a href="http://ab2005.gantep.edu.tr/index.php">Akademik Bilişim 2005</a>
-konferansında duyurulan ve katılımcılara dağıtılan Pardus Çalışan CD,
-Pardus Ulusal İşletim Sistemi'nin CD üzerinde çalışan sürümünü içeriyor.
-CD içerisinde ofis araçları (metin düzenleyici, hesap tablosu, sunum hazırlayıcı,
-vb.), İnternet araçları (tarayıcı, e-posta, sohbet, vb.), çokluortam
-ve grafik araçları (film oynatıcı, müzik çalar, vb.), oyunlar ve
-çok sayıda uygulama mevcut. </span>
+<span class="metin">Pardus Live CD, bootable CD version of Pardus National Operating System, has been announced and distributed to participiants in <a href="http://ab2005.gantep.edu.tr/index.php">Akademik Bilişim 2005</a> organized in Gaziantep.
+Live CD includes office tools (word processor, spreadsheet editor, presentation tool,
+vb.), internet tools (browser, e-mail client, chat, vb.), multimedia and graphic tools (movie player, music player, vb.), games and
+lots of other applications. </span>
 
 <p class="metin">
-İstanbul Bilgi Üniversitesinin düzenlediği <a href="http://open.bilgi.edu.tr/freedays/">Açık Kaynak Günleri 2005</a> etkinliğinde, katılımcılara Ulusal Dağıtım hakkında bilgi verildi
-ve <a href="urunler/pardus_calisan_cd_1.0.html">Pardus Çalışan CD 1.0</a> tam sürümü dağıtıldı.
+At<a href="http://open.bilgi.edu.tr/freedays/"> Open Source Days</a>, organized by İstanbul Bilgi University, information about Pardus has been given to participiants and
+<a href="urunler/pardus_calisan_cd_1.0.html">Pardus Live CD 1.0</a> has been distributed.
 </p>
 
-<p class="baslik"><span class="emph">Pardus,
-özgür yazılım yaklaşımı ile açık kaynaklı yayımlanmakta ve</span> <a href="./gpl.html">GNU Genel Kamu Lisansı</a>              <span class="emph">(General Public License – GPL) ile özgürce dağıtılmaktadır. Bu
-karar 30 Ocak 2005'te yayınlanan Uludağ Haftalık Bülteni'nde açıklanmıştı.</span></p>
+<p class="metin">
+Currently,
+Web page translation work has begun for English language. We are planning to finish this work as soon as possible.
+Please try again and thank you for your understanding.
+</p>
+
+<p class="baslik"><span class="emph">
+Pardus is open source and freely distributed under the terms of</span> <a href="./gpl.html">GNU General Public License</a>              <span class="emph">This arbitrament was announced in Uludağ Weekly Bulletin published at 2005-01-30.</span></p>
 <p class="baslik">&nbsp;</p></td>
 </tr>
 </table>
@@ -89,11 +90,11 @@ karar 30 Ocak 2005'te yayınlanan Uludağ Haftalık Bülteni'nde açıklanmışt
 <tr>
 	<td height="30" valign="top" bgcolor="ff6600">
 		<img src="images/haber1.png" alt="nokta" width="60" height="19">
-		<span class="haberbaslik">Uludağ Haberleri</span>
+		<span class="haberbaslik">Uludağ News</span>
 	</td>
 	<td height="30" valign="top" bgcolor="990000">
 		<img src="images/bulten2.png" alt="nokta" width="60" height="19">
-		<span class="haberbaslik">Uludağ Bülteni</span>
+		<span class="haberbaslik">Uludağ Bulletin</span>
 	</td>
 </tr>
 <tr>
@@ -101,28 +102,27 @@ karar 30 Ocak 2005'te yayınlanan Uludağ Haftalık Bülteni'nde açıklanmışt
 <br>
 
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11">
-<strong> 16 Mart 2005</strong>
-// Web sayfalarımız gelen istekler ve sorular doğrultusunda yeniden düzenlendi.<br>
+<strong> 2005-03-16 </strong>
+// Web pages was re-designed in accordance with incoming requests and questions.<br>
 
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11">
-<strong> 07 Aralık 2004</strong>
-// Uludağ Haftalık Bülteni arşivi yayınlanmaya başlandı. Bültene rss bağlantısı
-ile de ulaşabilirsiniz.<br>
+<strong> 2004-12-07</strong>
+// Uludağ Weeky Bulletin archive was started to be published. You can access bulletins via rss.<br>
 
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11">
-<strong> 19 Kasım 2004</strong>
-// Haber bültenimizin ilk sayısı çıktı...
+<strong> 2004-11-19</strong>
+// The first Uludağ Bulletin has been published...
 </td>
 
 <td valign="top" class="metin">
 
 <br>
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
-<strong><a href="bulten/arsiv/27022005.html">27 Şubat 2005</a></strong>
-// Açık Kaynak Günleri, kalite takımı, yeni belgeler...
+<strong><a href="bulten/arsiv/27022005.html">2005-02-27</a></strong>
+// Open Source Days, quality team, new documents...
 <br>
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11">
-<strong><a href="bulten/index.html">Önceki bültenler...</a></strong>
+<strong><a href="bulten/index.html">Bulletin Archive...</a></strong>
 
 </td>
 </tr>
@@ -134,11 +134,10 @@ ile de ulaşabilirsiniz.<br>
 <br>
 <br>
 <p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
+Information and documents on web pages of Ulusal Dağıtım Project can be used freely anywhere provided that the original source cited.
 <em><br>
 <strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
+For information and suggestion
 <a href="mailto:bilgi at uludag.org.tr">bilgi
 at uludag.org.tr</a>
 </p>
